[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu/menuEnvironment.tres" type="Environment" id=2]
[ext_resource path="res://vehicles/bluerovheavy/bluerov cleaned decimated.gltf" type="PackedScene" id=3]
[ext_resource path="res://assets/background.jpg" type="Texture" id=4]
[ext_resource path="res://assets/logo_ender_blanc.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Regular.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/ui/main_menu.gd" type="Script" id=7]
[ext_resource path="res://scripts/ui/licences_dialog.gd" type="Script" id=8]

[sub_resource type="Animation" id=2]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -360, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
licences_popup_path = NodePath("LicencesDialog")

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 300 )
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06004, 2.38419e-07, 2.77837 )
environment = ExtResource( 2 )

[node name="SpotLight" type="SpotLight" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.941659, 0.336569, 0, -0.336569, 0.941659, 0.295804, 0.721521, 2.64046 )
light_energy = 11.99

[node name="SpotLight2" type="SpotLight" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.69466, 0.721521, 2.64046 )
light_energy = 11.99

[node name="Spatial" type="Spatial" parent="ViewportContainer/Viewport"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="ViewportContainer/Viewport/Spatial"]
autoplay = "rotatingbluerov"
anims/rotatingbluerov = SubResource( 2 )

[node name="bluerov cleaned decimated" parent="ViewportContainer/Viewport/Spatial" instance=ExtResource( 3 )]
transform = Transform( 1, 0, -6.55651e-07, 0, 1, 0, 6.55651e-07, 0, 1, 0.348981, 0, -0.233652 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="Logo" type="TextureRect" parent="."]
margin_left = 129.0
margin_top = 82.0
margin_right = 348.0
margin_bottom = 210.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 47.0833
margin_top = 252.357
margin_right = 432.083
margin_bottom = 366.357
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Menu" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 136.0
margin_right = 247.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer/Menu"]
margin_right = 111.0
margin_bottom = 51.0
rect_min_size = Vector2( 111, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poolLevel" type="Button" parent="HBoxContainer/Menu/Buttons"]
margin_right = 111.0
margin_bottom = 51.0
rect_min_size = Vector2( 111, 51 )
custom_fonts/font = ExtResource( 6 )
text = "PRACTICE"

[node name="customLevel" type="Button" parent="HBoxContainer/Menu/Buttons"]
visible = false
margin_top = 55.0
margin_right = 111.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 6 )
text = "Ship Level"

[node name="Licences" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -127.0
margin_top = -68.0
margin_right = -16.0
margin_bottom = -17.0
rect_min_size = Vector2( 111, 51 )
custom_fonts/font = ExtResource( 6 )
text = "Licences"

[node name="LicencesDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -412.0
margin_top = -200.0
margin_right = 412.0
margin_bottom = 200.0
window_title = "Licences"
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="LicencesDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
bbcode_enabled = true
bbcode_text = "Ender Ocean : Your mission \"Clean the Ocean\"

[url]https://www.enderocean.com[/url]

Published under Open Source License - Affero GPL (AGPL)

Credits Images : Vecteezy"
text = "Ender Ocean : Your mission \"Clean the Ocean\"

https://www.enderocean.com

Published under Open Source License - Affero GPL (AGPL)

Credits Images : Vecteezy"

[connection signal="pressed" from="HBoxContainer/Menu/Buttons/poolLevel" to="." method="_on_poolLevel_pressed"]
[connection signal="pressed" from="HBoxContainer/Menu/Buttons/customLevel" to="." method="_on_customLevel_pressed"]
[connection signal="pressed" from="Licences" to="." method="_on_licences_pressed"]
[connection signal="meta_clicked" from="LicencesDialog/RichTextLabel" to="LicencesDialog" method="_on_meta_clicked"]
